# sql_agent

./: .gitignore  BEFORE_AFTER_COMPARISON.md  CHANGES_SUMMARY.md  IMPLEMENTATION_GUIDE.md  MONGODB_QUERY_IN_RESPONSE.md  QUICK_REFERENCE.md  README copy.md  README.md  REFACTORING_COMPLETE.md  REFACTOR_SUMMARY.md  RESPONSE_FORMAT_COMPARISON.md  RESPONSE_FORMAT_UPDATED.md  UPDATED_RESPONSE_FORMAT.md  debug_credentials.py  pyproject.toml  requirements.txt  test_refactored_mongodb.py  test_signup.py
backend/: .env.example  check_raw_values.py  check_users_schema.py  check_uuid_format.py  clear_all_cache.py  clear_rate_limit.py  config.py  fix_uuid_format.py  logging_config.py  main.py  reset_and_seed.py  seed_tenant.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_system_prompt_to_databases.py  002_drop_system_prompt.py  003_encrypt_credentials_and_lockout.py  004_message_result_snapshot.py  644cb6809911_add_database_and_database_credentials_.py
backend/auth/: __init__.py  _core.py  deps.py  models.py  security.py  service.py
backend/auth/models/: __init__.py
backend/auth/router/: __init__.py  router.py
backend/auth/schemas/: __init__.py
backend/auth/service/: __init__.py  service.py
backend/auth/signin/: router.py  schemas.py  service.py
backend/auth/signout/: router.py  service.py
backend/auth/signup/: router.py  service.py
backend/core/: __init__.py  config.py  db.py  logging_config.py  observability.py  tracing.py
backend/database/: __init__.py  crypto.py  models.py  router.py  schemas.py  service.py
backend/database/models/: __init__.py  models.py
backend/database/router/: __init__.py  (+1 more)
backend/query/: guard.py  models.py  pipeline.py  prompts.py  router.py  schemas.py  service.py
backend/signin/: .env.example  router.py  schemas.py  service.py
backend/signout/: _core.py  requirements.txt  router.py  schemas.py  service.py
backend/signup/: models.py  router.py  schemas.py  service.py
backend/utils/: __init__.py
frontend/src/: App.jsx
tests/: test_connection_errors.py  test_guard.py
(+62 files in other folders)
