[project]
name = "ecom-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "langchain>=1.3.11",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.6",
    "pydantic>=2.13.4",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "langsmith>=0.9.0",
    "alembic>=1.18.4",
    "aiomysql>=0.3.2",
    "asyncpg>=0.31.0",
    "pymongo>=4.17.0",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "pyjwt>=2.13.0",
    "python-jose>=3.5.0",
    "bcrypt>=5.0.0",
    "passlib>=1.7.4",
    "httpx>=0.28.1",
    "requests>=2.34.2",
    "redis>=8.0.1",
    "aiosmtplib>=5.1.2",
    "pyotp>=2.10.0",
    "qrcode>=8.2",
]
