[project]
name = "sql-agent"
version = "0.1.0"
description = "Ask your MySQL or PostgreSQL database questions in plain English."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.138.0",
    "uvicorn>=0.49.0",
    # Agent
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    # Database
    "sqlalchemy>=2.0.51",
    "alembic>=1.18.4",
    "aiomysql>=0.3.2",       # app database, async (DATABASE_URL)
    "pymysql>=1.2.0",        # app database for migrations; also MySQL query targets
    "psycopg2-binary>=2.9.0",  # PostgreSQL query targets
    "asyncpg>=0.31.0",       # only needed if the app database itself is PostgreSQL
    # Auth
    "python-jose>=3.5.0",
    "bcrypt>=5.0.0",
    "cryptography>=44.0.0",  # Fernet, for encrypting stored connection passwords
    # Config and validation
    "pydantic>=2.13.4",
    "email-validator>=2.2.0",  # required by pydantic's EmailStr
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",  # lets the test suite run the app against SQLite
    "httpx>=0.28.1",      # required by starlette's TestClient
]
